# mini_chess

./: CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  menu.cpp  menu.hpp  piece.cpp  window.cpp  window.hpp
